# aoc-ocaml

./: README.md
data/: download.sh
lib/: aoc_lib.ml  dune  utils.ml  utils.mli  y2015_day1.ml  y2015_day10.ml  y2015_day11.ml  y2015_day12.ml  y2015_day13.ml  y2015_day14.ml  y2015_day15.ml  y2015_day16.ml  y2015_day18.ml  y2015_day2.ml  y2015_day3.ml  y2015_day4.ml  y2015_day5.ml  y2015_day6.ml  y2015_day7.ml  y2015_day8.ml  y2015_day9.ml
