(library
 (name aoc_lib)
 (inline_tests)
 (libraries base)
 (preprocess
  (pps ppx_jane))
 ; [-linkall] is needed to ensure all modules are compiled. By default, the
 ; compiler will not compile unused ml/mli files. This is a problem as at the
 ; end of each solution file we register the solution (a side-effect), which
 ; wouldn't get run if only [Solution.get] is called in the executable.
 (library_flags (-linkall)))
